# GenesisEngine

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  cmake_install.cmake  compile_commands.json  output
demo/: CMakeLists.txt  cmake_install.cmake  main.cpp
lib/: CMakeLists.txt  cmake_install.cmake
lib/imgui.cmake/: CMakeOptions.cmake
src/: CMakeLists.txt  cmake_install.cmake
src/core/: app.cpp  app.h  input.h
src/ecs/: component_array.h  component_manager.h  coordinator.cpp  coordinator.h  entity_manager.cpp  entity_manager.h  system.h  system_manager.cpp  system_manager.h
src/include/: ECS.h  Engine.h  Physics.h  Platform.h  Rendering.h
src/physics/: debug_collisions.cpp  debug_collisions.h  phys_test.h
src/physics/collision/: clipping.cpp  clipping.h  collider.h  collision.cpp  collision.h  cuboid_collider.cpp  cuboid_collider.h  epa.cpp  epa.h  gjk.cpp  gjk.h
src/physics/cuboid/: collision.cpp  collision.h  rigidbody.cpp  rigidbody.h
src/platform/: GLFWIntegration.cpp  GLFWIntegration.h  integration.cpp  integration.h
src/rendering/: camera.cpp  camera.h  cube_renderer.cpp  cube_renderer.h  test_renderer.cpp  test_renderer.h
src/rendering/shaders/: f_lighting.sc  f_simple.sc  v_lighting.sc  v_simple.sc  varying.def.sc
